--- a/python_code/src/data/ddpg_model/config.json
+++ b/python_code/src/data/ddpg_model/config.json
@@ -10,11 +10,11 @@
     "actor_critic":	"MLPActorCritic",
     "batch_size":	2500,
     "env_fn":	"BBEnv",
-    "epochs":	13,
+    "epochs":	200,
     "exp_name":	"test",
     "gamma":	0.99,
     "logger":	{
-        "<spinup.utils.logx.EpochLogger object at 0x7fe3ac777470>":	{
+        "<spinup.utils.logx.EpochLogger object at 0x7f454170b0f0>":	{
             "epoch_dict":	{},
             "exp_name":	"test",
             "first_row":	true,
