--- a/python_code/src/data/dyn_pid_controller/explo/le0.3_[100]_relu_0.99/config.json
+++ b/python_code/src/data/dyn_pid_controller/explo/le0.3_[100]_relu_0.99/config.json
@@ -9,11 +9,11 @@
     "actor_critic":	"PidActorCritic",
     "batch_size":	500,
     "env_fn":	"create_env",
-    "epochs":	250,
+    "epochs":	50,
     "exp_name":	"test",
     "gamma":	0.99,
     "logger":	{
-        "<spinup.utils.logx.EpochLogger object at 0x7f237db3d0b8>":	{
+        "<spinup.utils.logx.EpochLogger object at 0x7f22356cdd30>":	{
             "epoch_dict":	{},
             "exp_name":	"test",
             "first_row":	true,
