--- a/python_code/src/data/black_box_controller/explo/le0.3_[100]_relu_0.99/config.json
+++ b/python_code/src/data/black_box_controller/explo/le0.3_[100]_relu_0.99/config.json
@@ -2,18 +2,18 @@
     "ac_kwargs":	{
         "activation":	"ReLU",
         "hidden_sizes":	[
-            100
+            50
         ]
     },
     "act_noise":	0.1,
     "actor_critic":	"MLPActorCritic",
     "batch_size":	500,
     "env_fn":	"create_env",
-    "epochs":	300,
+    "epochs":	250,
     "exp_name":	"test",
     "gamma":	0.99,
     "logger":	{
-        "<spinup.utils.logx.EpochLogger object at 0x7efc18849dd8>":	{
+        "<spinup.utils.logx.EpochLogger object at 0x7fb8fbbe4278>":	{
             "epoch_dict":	{},
             "exp_name":	"test",
             "first_row":	true,
