--- a/python_code/src/data/dyn_pid_controller/explo/le0.6_[100]_relu_0.99_hard/config.json
+++ b/python_code/src/data/dyn_pid_controller/explo/le0.6_[100]_relu_0.99_hard/config.json
@@ -13,7 +13,7 @@
     "exp_name":	"test",
     "gamma":	0.99,
     "logger":	{
-        "<spinup.utils.logx.EpochLogger object at 0x7f8f10d30630>":	{
+        "<spinup.utils.logx.EpochLogger object at 0x7fa708f80a90>":	{
             "epoch_dict":	{},
             "exp_name":	"test",
             "first_row":	true,
