--- a/python_code/src/data/dyn_pid_controller/explo/le0.6_[200,100]_sigmoid_0.99_hard/config.json
+++ b/python_code/src/data/dyn_pid_controller/explo/le0.6_[200,100]_sigmoid_0.99_hard/config.json
@@ -14,7 +14,7 @@
     "exp_name":	"test",
     "gamma":	0.99,
     "logger":	{
-        "<spinup.utils.logx.EpochLogger object at 0x7f8f104da2b0>":	{
+        "<spinup.utils.logx.EpochLogger object at 0x7fa6f7146c88>":	{
             "epoch_dict":	{},
             "exp_name":	"test",
             "first_row":	true,
