--- a/python_code/src/data/black_box_controller_no_integral/exploratory_penality/lep_0.6_[200]_relu/config.json
+++ b/python_code/src/data/black_box_controller_no_integral/exploratory_penality/lep_0.6_[200]_relu/config.json
@@ -13,7 +13,7 @@
     "exp_name":	"test",
     "gamma":	0.99,
     "logger":	{
-        "<spinup.utils.logx.EpochLogger object at 0x7f09bee91f60>":	{
+        "<spinup.utils.logx.EpochLogger object at 0x7f47f469da58>":	{
             "epoch_dict":	{},
             "exp_name":	"test",
             "first_row":	true,
